# UrlShortener

./: CMakeLists.txt  README.md
backend/: CMakeLists.txt  main.cpp
frontend/: main.py
frontend/templates/: index.html  result.html
